Fixed layout issue of Contact me and Copyright section

--- a/websites/CSS - My Site/css/styles.css
+++ b/websites/CSS - My Site/css/styles.css
@@ -26,6 +26,12 @@ h3 {
   font-family: 'Montserrat', sans-serif;
 }
 
+h4{
+  color: #11999E;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: normal;
+}
+
 .bottom-cloud {
   bottom: 300px;
   position: absolute;
@@ -33,7 +39,7 @@ h3 {
 }
 
 .bottom-container {
-  background-color: #a2eae2;
+  background-color: white;
   padding-top: 10px;
 }
 
